EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==07/12/2009==
Trevius: Added "featuresave" option to #npcedit that will save all currently set facial features.
Trevius: Fixed crash for #randomfeatures if no target was selected before using it.
Congdar: Fix EQBOTS AISpells break. Add new rules, features too much to list.

==07/11/2009==
KLS: SoF - Changed raid join packet encode slightly.
KLS: SoF - Added workaround for disconnection on death for now.
WildcardX: Fixed BOTS so the bot doesn't warp to its owner.
WildcardX: All commands for the BOTS system can be tested now except for bot raiding and bot group raiding.

==07/10/2009==
Trevius: (Zeice) Added #mystats command as an alternative to #showstats that only shows stats for the client or it's own pet.
WildcardX: Migrated more code from EQBOTS to BOTS. The BOT code is less buggy than last iteration and now has even more active features that can be tested but there is a known issue or two I am aware of and working to correct.
KLS: Fix for fear not wearing off properly.
KLS: Small tweaks to npc spell ai.
KLS: SoF - Raids should now function properly.

==07/09/2009==
WildcardX: Migrated more code from EQBOTS to BOTS. The BOTS code can do basic functions now but its still "buggy" compared to EQBOTS until migration/integration is complete.
KLS: Clients are no longer immune to charm.
KLS: Added several checks for IsFeared where we were previously only checking IsStunned.
KLS: EVENT_COMBAT should no longer be called when a NPC dies.
KLS: Changed way AISpells was loading, did away with arbitrary 16 spell limit on npc spell lists.

==07/08/2009==
WildcardX: Migrated more code from EQBOTS to BOTS.
WildcardX: Included StringIDs.h to the zone project file and allowed the ";" to replace the "," characters in the WORLD project file.
Trevius: Added rule ArcheryBaseDamageBonus to allow easy adjustments to archery base damage