@@ -1,0 +1,6 @@
+UPDATE `rule_values` SET rule_value='10' WHERE rule_name='Combat:MonkDamageTableBonus';
+UPDATE `rule_values` SET rule_value='25' WHERE rule_name='Combat:FlyingKickBonus';
+UPDATE `rule_values` SET rule_value='20' WHERE rule_name='Combat:DragonPunchBonus';
+UPDATE `rule_values` SET rule_value='15' WHERE rule_name='Combat:EagleStrikeBonus';
+UPDATE `rule_values` SET rule_value='10' WHERE rule_name='Combat:TigerClawBonus';
+UPDATE `rule_values` SET rule_value='5' WHERE rule_name='Combat:RoundKickBonus';
